# my-first-blog

./: gitkey  gitkey.pub  pyproject.toml
blog/: urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: post_list.html
mysite/: settings.py
