[tool.poetry]
name = "django-trial"
version = "0.1.0"
description = ""
authors = ["Arvin Dale Villa <dale@mahusai.ph>"]
readme = "README.md"
packages = [{include = "django_trial"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
